//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table bodies {
  id String [pk]
  acronym String
  name String [not null]
  type BodyType [not null]
  roles roles [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table contributions {
  id String [pk]
  endDate DateTime
  startDate DateTime
  countryId String
  personId String [not null]
  roleId String [not null]
  workingGroupId String
  country countries
  person persons [not null]
  role roles [not null]
  workingGroup working_groups
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table countries {
  id String [pk]
  code String [not null]
  description String
  endDate DateTime
  logo String
  marketplaceId Int
  name String [not null]
  startDate DateTime
  type CountryType [not null]
  contributions contributions [not null]
  institutions institutions [not null]
  outreach outreach [not null]
  reports reports [not null]
  services services [not null]
  software software [not null]
  users users [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table event_sizes {
  id String [pk]
  annualValue Int [not null]
  type EventSizeType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table event_reports {
  id String [pk]
  dariahCommissionedEvent String
  largeMeetings Int
  mediumMeetings Int
  reusableOutcomes String
  smallMeetings Int
  reportId String [unique, not null]
  report reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  WGReport wgreports [not null]
}

Table institutions {
  id String [pk]
  endDate DateTime
  name String [not null]
  ror String
  startDate DateTime
  types InstitutionType[] [not null]
  url String[] [not null]
  countries countries [not null]
  persons persons [not null]
  services institution_service [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table institution_service {
  role InstitutionServiceRole [not null]
  institutionId String [not null]
  serviceId String [not null]
  institution institutions [not null]
  service services [not null]

  indexes {
    (institutionId, role, serviceId) [unique]
  }
}

Table outreach {
  id String [pk]
  endDate DateTime
  name String [not null]
  startDate DateTime
  type OutreachType [not null]
  url String [not null]
  countryId String
  country countries
  reports outreach_reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table outreach_type_values {
  id String [pk]
  annualValue Int [not null]
  type OutreachType [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table outreach_reports {
  id String [pk]
  outreachId String [not null]
  reportId String [not null]
  kpis outreach_kpis [not null]
  outreach outreach [not null]
  report reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table outreach_kpis {
  id String [pk]
  unit OutreachKpiType [not null]
  value Int [not null]
  outreachReportId String [not null]
  outreachReport outreach_reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table persons {
  id String [pk]
  email String
  name String [not null]
  orcid String
  contributions contributions [not null]
  institutions institutions [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table projects_funding_leverage {
  id String [pk]
  amount Decimal
  funders String
  name String [not null]
  projectMonths Int
  scope ProjectScope
  startDate DateTime
  totalAmount Decimal
  reportId String [not null]
  report reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table reports {
  id String [pk]
  comments Json
  contributionsCount Int
  operationalCost Decimal
  operationalCostDetail Json
  operationalCostThreshold Decimal
  status ReportStatus [not null, default: 'draft']
  year Int [not null]
  countryId String [not null]
  country countries [not null]
  eventReport event_reports
  outreachReports outreach_reports [not null]
  projectsFundingLeverages projects_funding_leverage [not null]
  researchPolicyDevelopments research_policy_developments [not null]
  serviceReports service_reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (countryId, year) [unique]
  }
}

Table research_policy_developments {
  id String [pk]
  level ResearchPolicyLevel [not null]
  name String [not null]
  outcome String
  reportId String [not null]
  report reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table roles {
  id String [pk]
  annualValue Int [not null]
  name String [not null]
  type RoleType [not null]
  bodies bodies [not null]
  contributions contributions [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table services {
  id String [pk]
  agreements String
  audience ServiceAudience
  dariahBranding Boolean
  eoscOnboarding Boolean
  marketplaceStatus ServiceMarketplaceStatus
  marketplaceId String
  monitoring Boolean
  name String [not null]
  privateSupplier Boolean
  status ServiceStatus
  technicalContact String
  technicalReadinessLevel Int
  type ServiceType
  url String[] [not null]
  valueProposition String
  sizeId String [not null]
  countries countries [not null]
  institutions institution_service [not null]
  reports service_reports [not null]
  size service_sizes [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table service_sizes {
  id String [pk]
  annualValue Int [not null]
  type ServiceSizeType [not null]
  services services [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table service_reports {
  id String [pk]
  reportId String [not null]
  serviceId String [not null]
  kpis service_kpis [not null]
  report reports [not null]
  service services [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table service_kpis {
  id String [pk]
  unit ServiceKpiType [not null]
  value Int [not null]
  serviceReportId String [not null]
  serviceReport service_reports [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table software {
  id String [pk]
  comment String
  name String [not null]
  marketplaceStatus SoftwareMarketplaceStatus
  marketplaceId String
  status SoftwareStatus
  url String[] [not null]
  countries countries [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table working_groups {
  id String [pk]
  endDate DateTime
  name String [not null]
  startDate DateTime
  chairs contributions [not null]
  member_tracking String
  mailing_list String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  WGReport wgreports [not null]
  WGEventDetail WGEventDetail
  wGEventDetailId String
}

Table wgreports {
  id String [pk]
  comments Json
  numberMebmers Int
  status ReportStatus [not null, default: 'draft']
  year Int [not null]
  narrativeReport String [not null]
  facultativeQuestions String [not null]
  workingGroupId String
  workingGroup working_groups
  eventReport event_reports
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  eventReportId String

  indexes {
    (workingGroupId, year) [unique]
  }
}

Table WGEventDetail {
  id String [pk]
  eventTitle String [not null]
  eventLink String [not null]
  working_groups working_groups [not null]
  eventDate DateTime
  eventRole String [not null]
}

Table accounts {
  id String [pk]
  access_token String
  expires_at Int
  id_token String
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  scope String
  session_state String
  token_type String
  type String [not null]
  userId String [not null]
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table users {
  id String [pk]
  email String [unique]
  emailVerified DateTime
  name String
  image String
  password String
  role UserRole [not null, default: 'contributor']
  status UserStatus [not null, default: 'unverified']
  countryId String
  accounts accounts [not null]
  country countries
}

Table BodyToRole {
  rolesId String [ref: > roles.id]
  bodiesId String [ref: > bodies.id]
}

Table CountryToInstitution {
  institutionsId String [ref: > institutions.id]
  countriesId String [ref: > countries.id]
}

Table CountryToService {
  servicesId String [ref: > services.id]
  countriesId String [ref: > countries.id]
}

Table CountryToSoftware {
  softwareId String [ref: > software.id]
  countriesId String [ref: > countries.id]
}

Table InstitutionToPerson {
  personsId String [ref: > persons.id]
  institutionsId String [ref: > institutions.id]
}

Enum BodyType {
  bod
  dco
  ga
  jrc
  ncc
  sb
  smt
}

Enum CountryType {
  cooperating_partnership
  member_country
  other
}

Enum EventSizeType {
  dariah_commissioned
  large
  medium
  small
}

Enum InstitutionType {
  cooperating_partner
  national_coordinating_institution
  national_representative_institution
  other
  partner_institution
}

Enum InstitutionServiceRole {
  content_provider
  service_owner
  service_provider
  technical_contact
}

Enum OutreachType {
  national_website
  social_media
}

Enum OutreachKpiType {
  engagement
  followers
  impressions
  mention
  new_content
  page_views
  posts
  reach
  subscribers
  unique_visitors
  views
  watch_time
}

Enum ProjectScope {
  eu
  national
  regional
}

Enum ReportStatus {
  draft
  final
}

Enum ResearchPolicyLevel {
  eu
  international
  institutional
  national
  regional
}

Enum RoleType {
  dco_member
  director
  national_coordinator
  national_coordinator_deputy
  national_representative
  jrc_member
  scientific_board_member
  smt_member
  wg_chair
  wg_member
}

Enum ServiceAudience {
  dariah_team
  global
  national_local
}

Enum ServiceMarketplaceStatus {
  no
  not_applicable
  yes
}

Enum ServiceStatus {
  discontinued
  in_preparation
  live
  needs_review
  to_be_discontinued
}

Enum ServiceType {
  community
  core
  internal
}

Enum ServiceSizeType {
  core
  large
  medium
  small
}

Enum ServiceKpiType {
  downloads
  hits
  items
  jobs_processed
  page_views
  registered_users
  searches
  sessions
  unique_users
  visits
  websites_hosted
}

Enum SoftwareMarketplaceStatus {
  added_as_external_id
  added_as_item
  no
  not_applicable
}

Enum SoftwareStatus {
  maintained
  needs_review
  not_maintained
}

Enum UserRole {
  admin
  contributor
  national_coordinator
}

Enum UserStatus {
  unverified
  verified
}

Ref: contributions.countryId > countries.id

Ref: contributions.personId > persons.id [delete: Cascade]

Ref: contributions.roleId > roles.id [delete: Cascade]

Ref: contributions.workingGroupId > working_groups.id

Ref: event_reports.reportId - reports.id [delete: Cascade]

Ref: institution_service.institutionId > institutions.id [delete: Cascade]

Ref: institution_service.serviceId > services.id [delete: Cascade]

Ref: outreach.countryId > countries.id [delete: Cascade]

Ref: outreach_reports.outreachId > outreach.id [delete: Cascade]

Ref: outreach_reports.reportId > reports.id [delete: Cascade]

Ref: outreach_kpis.outreachReportId > outreach_reports.id [delete: Cascade]

Ref: projects_funding_leverage.reportId > reports.id [delete: Cascade]

Ref: reports.countryId > countries.id [delete: Cascade]

Ref: research_policy_developments.reportId > reports.id [delete: Cascade]

Ref: services.sizeId > service_sizes.id

Ref: service_reports.reportId > reports.id [delete: Cascade]

Ref: service_reports.serviceId > services.id [delete: Cascade]

Ref: service_kpis.serviceReportId > service_reports.id [delete: Cascade]

Ref: working_groups.wGEventDetailId > WGEventDetail.id

Ref: wgreports.workingGroupId > working_groups.id

Ref: wgreports.eventReportId > event_reports.id

Ref: accounts.userId > users.id [delete: Cascade]

Ref: users.countryId > countries.id